Compare font-feature-settings as part of Font::operator==().

We only did a pointer comparison which always failed when doing a style
recalc since a style recalc always creates a new FontFeatureSetting
object.

R=eae@chromium.org
BUG=602802,602959

Review URL: https://codereview.chromium.org/1887613002

Cr-Commit-Position: refs/heads/master@{#387001}

Former-commit-id: 3b6513eaede077dc4171f5a05157a8658279a68a